<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:layout_height="match_parent"
    tools:context=".Activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/welcome_back"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/login_to_continue"
            android:textColor="@color/secondary_Text"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:id="@+id/inputEmail"
            android:background="@drawable/backgorund_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:paddingStart="@dimen/_16sdp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:id="@+id/inputPassword"
            android:background="@drawable/backgorund_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:importantForAutofill="no"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>
        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="match_parent"
            android:animateLayoutChanges="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:id="@+id/buttonSignIn"
            android:text="@string/sign_in"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/_8sdp"/>
            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

        <TextView
            android:id="@+id/txtCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"/>







    </LinearLayout>



</ScrollView>